[package]
name = "vita-std-tests"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
repository = "https://github.com/vita-rust/examples"
homepage = "https://github.com/vita-rust/examples/crates/0-std-tests"

[dependencies]
anyhow = "1.0.71"
libc = "0.2.149"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"

[package.metadata.vita]
title_id = "RUSTTESTS"
title_name = "Rust std tests"
