[package]
name = "vita-example-http"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
repository = "https://github.com/vita-rust/examples"
homepage = "https://github.com/vita-rust/examples/crates/2-http-client"

[features]
default = ["rustls", "shims"]
shims = ["vita-newlib-shims"]
rustls = ["reqwest/rustls-tls", "oxhttp/rustls"]
openssl = ["reqwest/native-tls"]

[dependencies]
anyhow = "1.0"
libc = "0.2.149"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["macros", "rt", "net"] }
oxhttp = { version = "0.1.7", features = ["rustls"] }
ureq = { version = "2.7.1", default-features = false, features = ["gzip"] }
vita-newlib-shims = { version = "0.2", optional = true }

[package.metadata.vita]
title_id = "RUSTTEST2"
title_name = "Rust http test"

# This disables safe mode (default -s flag) for reading openssl certs
vita_make_fself_flags = []
