[package]
name = "vita-example-http"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
repository = "https://github.com/vita-rust/examples"
homepage = "https://github.com/vita-rust/examples/crates/2-http-client"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls", "oxhttp/rustls"]
openssl = ["reqwest/native-tls"]

[dependencies]
# No need for shims with latest VITASDK
vita-newlib-shims = { version = "0.3" }

# Force cargo to use at least these versions of transitive dependencies.
# You can either do `cargo update`, or specify them here.
libc = "0.2.149"
mio = "0.8.9"
socket2 = "0.5.5"
socket24 = { version = "0.4.10", package = "socket2"}

# Actual dependencies
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["macros", "rt", "net"] }
oxhttp = { version = "0.2.0-alpha.1", features = ["rustls", "webpki-roots"] }
ureq = { version = "2.7.1", default-features = false, features = ["gzip"] }

[package.metadata.vita]
title_id = "RUSTTEST2"
title_name = "Rust http test"

# This disables safe mode (default -s flag) for reading openssl certs
vita_make_fself_flags = []
